--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="">COURSE</a></li>
                     <li><a href="">BLOG</a></li>
-                    <li><a href="">CONTACT</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="login.html">LOGIN</a></li>
                 </ul>
            </div>
            <i id="menu" class="fa fa-bars" onclick="showMenu()"></i>
