--- a/login.html
+++ b/login.html
@@ -1,26 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="style2.css">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TeaHouse</title>
-</head>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Tea House Iasi</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style2.css">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600;700&display=swap" rel="stylesheet">
+
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    </head>
 <body>
+    <section class="sub-header">
+        <nav>
+           <a href="index.html"><img src="images/logo.png"></a>
+           <div class="nav-links" id="navLinks">
+            <i class="fa fa-times"  onclick="hideMenu()"></i>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="">MENU</a></li>
+                <li><a href="">RESERVATION</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="">HELP</a></li>
+                <li><a href="login.html">LOGIN</a></li>
+            </ul>
+           </div>
+           <i id="menu" class="fa fa-bars" onclick="showMenu()"></i>
+        </nav>
+
+        <h1>Login</h1>
+
+    </section>
    <div class="wrapper">
-    <h1>Login</h1>
     <form action="#">
-        <input type="text" placeholder="Email">
-        <input type="password" placeholder="Password">
+        <input type="text" placeholder="Email" required>
+        <input type="password" placeholder="Password" required>
         <div class="recover">
             <a href="./forgot.html">Forgot password?</a>
         </div>
+        <button>Login</button>
     </form>
-    <button>Login</button>
+   
     <div class="member">
         Not a member? <a href="./signup.html">Register Now</a> 
     </div>
    </div>
+   <section class="footer">
+    <h4>About Us</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+        ut labore et dolore magna aliqua.<br>Ut enim ad minim veniam, quis nostrud exercitation ullamco
+        laboris nisi ut .</p>
+    <div class="icons">
+        <i class="fa fa-facebook" ></i>
+        <i class="fa fa-twitter" ></i>
+        <i class="fa fa-instagram" ></i>
+    </div>   
+</section>
+
+ <!------JavaScript for Toggle Menu ------>   
+<script>
+     var navLinks = document.getElementById("navLinks");
+     function showMenu(){
+        navLinks.style.right = "0";
+     }
+     function hideMenu(){
+        navLinks.style.right = "-200px";
+     }
+
+</script>
 </body>
 </html>
