--- a/contact.html
+++ b/contact.html
@@ -20,10 +20,11 @@
             <i class="fa fa-times"  onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="">COURSE</a></li>
-                    <li><a href="">BLOG</a></li>
+                    <li><a href="menu.html">MENU</a></li>
+                    <li><a href="reservation.html">RESERVATION</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                    <li><a href="help.html">HELP</a></li>
                     <li><a href="login.html">LOGIN</a></li>
                 </ul>
            </div>
@@ -63,7 +64,7 @@
                 <input type="text" placeholder="Enter Your Name" required>
                 <input type="email" placeholder="Enter Your Email" required>
                 <input type="text" placeholder="Enter Your Request" required>
-                <textarea rows="8" placeholder="Your Messag" required></textarea>
+                <textarea rows="8" placeholder="Your Message" required></textarea>
                 <button type="submit" class="hero-btn red-btn">Send The Message</button>
             </form>
         </div>     
