--- a/menu.html
+++ b/menu.html
@@ -31,31 +31,73 @@
            <i id="menu" class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
 
-      <h1>About Us</h1>
+      <h1>Menu</h1>
 
     </section>
-<!------about us content ------>
 
-<section class="about-us">
+<!------menu content ------>
+
+
+<section class="campus">
+    <h1> What can you buy from us ?</h1> 
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
     <div class="row">
-        <div class="about-col">
-            <h1> We are the world's biggest Tea House</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                ut labore et dolore magna aliqua.<br>Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut ...Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                ut labore et dolore magna aliqua.<br>Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut .</p>
-                <a href="" class="hero-btn red-btn">EXPLORE NOW</a>
+        <div class="campus-col">
+            <img src="images/blackTea.png">
+            <div class="layer">
+                <h3>Black Tea</h3>
+                <h4>9.99 $</h4>
+                <a href="cos.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
+            </div>
         </div>
-        <div class="about-col">
-            <img src="images/about.jpg">
+        <div class="campus-col">
+            <img src="images/mintTea.png">
+            <div class="layer">
+                <h3>Mint Tea</h3>
+                <h4>10 $</h4>
+                <a href="cos.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
+            </div>
         </div>
-    
+        <div class="campus-col">
+            <img src="images/berryTea.png">
+            <div class="layer">
+                <h3>Berry Tea</h3>
+                <h4>12 $</h4>
+                <a href="cos.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
+            </div>
+        </div>
     </div>
 
+    <div class="row">
+        <div class="campus-col">
+            <img src="images/lindenTea.png">
+            <div class="layer">
+                <h3>Linden Tea</h3>
+                <h4>7.99 $</h4>
+                <a href="cos.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
+            </div>
+        </div>
+        <div class="campus-col">
+            <img src="images/greenTea.png">
+            <div class="layer">
+                <h3>Green Tea</h3>
+                <h4>8.99 $</h4>
+                <a href="cos.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
+            </div>
+        </div>
+        <div class="campus-col">
+            <img src="images/gingerTea.png">
+            <div class="layer">
+                <h3>Ginger Tea</h3>
+                <h4>4.99 $</h4>
+                <a href="cos.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
+            </div>
+        </div>
+    </div>
+
+
 </section>
-
-
 
 <section class="footer">
     <h4>About Us</h4>
@@ -68,7 +110,6 @@
         <i class="fa fa-instagram" ></i>
         <i class="fa fa-linkedin" ></i>
     </div>   
-
 </section>
 
  <!------JavaScript for Toggle Menu ------>   
