--- a/forgot.html
+++ b/forgot.html
@@ -22,11 +22,11 @@
                 <i class="fa fa-times"  onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="">MENU</a></li>
-                    <li><a href="">RESERVATION</a></li>
+                    <li><a href="menu.html">MENU</a></li>
+                    <li><a href="reservation.html">RESERVATION</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="">HELP</a></li>
+                    <li><a href="help.html">HELP</a></li>
                     <li><a href="login.html">LOGIN</a></li>
                 </ul>
                </div>
