--- a/help.html
+++ b/help.html
@@ -31,31 +31,22 @@
            <i id="menu" class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
 
-      <h1>About Us</h1>
+      <h1>Help</h1>
 
     </section>
-<!------about us content ------>
 
-<section class="about-us">
-    <div class="row">
-        <div class="about-col">
-            <h1> We are the world's biggest Tea House</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                ut labore et dolore magna aliqua.<br>Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut ...Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                ut labore et dolore magna aliqua.<br>Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut .</p>
-                <a href="" class="hero-btn red-btn">EXPLORE NOW</a>
-        </div>
-        <div class="about-col">
-            <img src="images/about.jpg">
-        </div>
-    
-    </div>
+<!------help content ------>
+
+
+<section class="campus">
+    <h1> How can you use this site ?</h1> 
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
 
 </section>
 
-
+<section class="campus"><h1> Enter the site, register, login, add items to cart, buy them. </h1></section>
+<section class="campus"><h1> Be happy ! :) </h1></section>
 
 <section class="footer">
     <h4>About Us</h4>
@@ -68,7 +59,6 @@
         <i class="fa fa-instagram" ></i>
         <i class="fa fa-linkedin" ></i>
     </div>   
-
 </section>
 
  <!------JavaScript for Toggle Menu ------>   
