--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
             <i class="fa fa-times"  onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="">COURSE</a></li>
-                    <li><a href="">BLOG</a></li>
+                    <li><a href="menu.html">MENU</a></li>
+                    <li><a href="reservation.html">RESERVATION</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                    <li><a href="help.html">HELP</a></li>
                     <li><a href="login.html">LOGIN</a></li>
                 </ul>
            </div>
@@ -45,19 +46,19 @@
 
         <div class="row" >
             <div class="course-col">
-                <h3>Ceai de menta</h3>
+                <h3>Mint Tea</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
                     ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                      laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
             <div class="course-col">
-                <h3>Ceai de tei</h3>
+                <h3>Lindea Tea</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
                     ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                      laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
             <div class="course-col">
-                <h3>Ceai ma</h3>
+                <h3>Berry Tea</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
                     ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                      laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -69,63 +70,19 @@
     
     <!----Campus---->
     <section class="campus">
-        <h1> Unde ne gasiti  </h1> 
+        <h1> Where can you find us ?</h1> 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
         <div class="row">
-            <div class="campus-col">
-                <img src="images/gradina.png">
-                <div class="layer">
-                    <h3>Gradina Botanica</h3>
-                </div>
-            </div>
-
             <div class="campus-col">
                 <img src="images/infouaic.png">
                 <div class="layer">
                     <h3>Facultatea de Informatica</h3>
                 </div>
             </div>
-
-            <div class="campus-col">
-                <img src="images/uaic.png">
-                <div class="layer">
-                    <h3>UAIC Iasi</h3>
-                </div>
-            </div>
         </div>
 
     </section>
-
-<!----Facilities -->
-<section class="facilities">
-    <h1>Our Facilities</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-    <div class="row">
-        <div class="facilities-col">
-            <img src="images/library.png">
-            <h3>World Class Library</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                ut labore et dolore magna aliqua.</p>
-        </div>
-
-        <div class="facilities-col">
-            <img src="images/basketball.png">
-            <h3>Largest Play Ground</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                ut labore et dolore magna aliqua.</p>
-        </div>
-
-        <div class="facilities-col">
-            <img src="images/cafeteria.png">
-            <h3>Tasty and Healthy Food</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                ut labore et dolore magna aliqua.</p>
-        </div>
-    </div>
-
-</section>
 
 <!----testimonials ------>
 <section class="testimonials">
@@ -167,21 +124,18 @@
 
 <!----Call To Action ------>
 <section class="cta">
-    <h1>Enroll for our various online courses<br> Anywhere From The World</h1>
-    <a href="" class="hero-btn">CONTACT US</a>
+    <h1>For an appointment contact us.</h1>
+    <a href="contact.html" class="hero-btn">CONTACT US</a>
 </section>
 
 <!----Footer ------>
 <section class="footer">
     <h4>About Us</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-        ut labore et dolore magna aliqua.<br>Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut .</p>
+    <p>To watch the latest news about us, follow us on our social media platforms</p>
     <div class="icons">
         <i class="fa fa-facebook" ></i>
-        <i class="fa fa-twitter" ></i>
         <i class="fa fa-instagram" ></i>
-        <i class="fa fa-linkedin" ></i>
+        <i class="fa fa-twitter" ></i>
     </div>   
 
 </section>
