--- a/reservation.html
+++ b/reservation.html
@@ -31,31 +31,38 @@
            <i id="menu" class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
 
-      <h1>About Us</h1>
+      <h1>Contact Us</h1>
 
     </section>
-<!------about us content ------>
 
-<section class="about-us">
+<!------reservation content ------>
+
+<section><h3>Complete and send this form to book your reservation.</h3></section>
+
+<section class="contact-us">
     <div class="row">
-        <div class="about-col">
-            <h1> We are the world's biggest Tea House</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                ut labore et dolore magna aliqua.<br>Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut ...Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                ut labore et dolore magna aliqua.<br>Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut .</p>
-                <a href="" class="hero-btn red-btn">EXPLORE NOW</a>
-        </div>
-        <div class="about-col">
-            <img src="images/about.jpg">
-        </div>
-    
+        <div class="contact-col">
+            <form action="">
+                <label for="name">Enter Your Name:</label>
+                <input type="text" id="name" name="name" placeholder="Enter Your Name" required>
+                <label for="email">Enter Your Email:</label>
+                <input type="email" id="email" name="email" placeholder="Enter Your Email" required>
+                <label for="table">Select your table number:</label>
+                <select id="table" name="table" required>
+                <option value="">--Select your table number--</option>
+                <script>
+                    for (var i = 1; i <= 10; i++) {
+                    document.write('<option value="' + i + '">' + i + '</option>');
+    }
+  </script>
+</select>
+
+<button type="submit" class="hero-btn red-btn">Send The Message</button>
+
+            </form>
+        </div>     
     </div>
-
 </section>
-
-
 
 <section class="footer">
     <h4>About Us</h4>
@@ -68,7 +75,6 @@
         <i class="fa fa-instagram" ></i>
         <i class="fa fa-linkedin" ></i>
     </div>   
-
 </section>
 
  <!------JavaScript for Toggle Menu ------>   
