--- a/cart.html
+++ b/cart.html
@@ -4,11 +4,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <title>Tea House Iasi</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="style2.css">
-
+        <link rel="stylesheet" href="cart.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
-
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600;700&display=swap" rel="stylesheet">
@@ -23,12 +20,14 @@
                 <i class="fa fa-times"  onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="">MENU</a></li>
-                    <li><a href="">RESERVATION</a></li>
+                    <li><a href="menu.html">MENU</a></li>
+                    <li><a href="reservation.html">RESERVATION</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="">HELP</a></li>
+                    <li><a href="help.html">HELP</a></li>
                     <li><a href="login.html">LOGIN</a></li>
+                    
+                    
                 </ul>
                </div>
                <i id="menu" class="fa fa-bars" onclick="showMenu()"></i>
@@ -103,6 +102,9 @@
             <tr>
                 <td>Total</td>
                 <td>31.98$</td>
+            </tr>
+            <tr>
+                <td colspan="2"><button class="order-button">Order</button></td>
             </tr>
         </table>
     </div>
