--- a/forgot.html
+++ b/forgot.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
         <title>Tea House Iasi</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="style2.css">
+        <link rel="stylesheet" href="log.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
 
@@ -17,16 +17,16 @@
     <body>
         <section class="sub-header">
             <nav>
-               <a href="index.html"><img src="images/logo.png"></a>
+                <a href="index.html"><img src="images/logo.png" alt="Tea House Iasi Logo"></a>
                <div class="nav-links" id="navLinks">
                 <i class="fa fa-times"  onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="">MENU</a></li>
-                    <li><a href="">RESERVATION</a></li>
+                    <li><a href="menu.html">MENU</a></li>
+                    <li><a href="reservation.html">RESERVATION</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="">HELP</a></li>
+                    <li><a href="help.html">HELP</a></li>
                     <li><a href="login.html">LOGIN</a></li>
                 </ul>
                </div>
@@ -57,8 +57,6 @@
         <i class="fa fa-instagram" ></i>
     </div>   
 </section>
-
- <!------JavaScript for Toggle Menu ------>   
 <script>
      var navLinks = document.getElementById("navLinks");
      function showMenu(){
