--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <title>Tea House Iasi</title>
-        <link rel="stylesheet" href="about.css">
+        <link rel="stylesheet" href="styles/about.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
