--- a/forgot.html
+++ b/forgot.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <title>Tea House Iasi</title>
-        <link rel="stylesheet" href="styles/log.css">
+        <link rel="stylesheet" href="log.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
 
