--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tea House Iasi</title>
-        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,7 +48,7 @@
             <div class="layer">
                 <h3>Black Tea</h3>
                 <h4>9.99 $</h4>
-                <a href="cart.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
+                <a href="cos.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
             </div>
         </div>
         <div class="campus-col">
@@ -56,7 +56,7 @@
             <div class="layer">
                 <h3>Mint Tea</h3>
                 <h4>10 $</h4>
-                <a href="cart.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
+                <a href="cos.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
             </div>
         </div>
         <div class="campus-col">
@@ -64,7 +64,7 @@
             <div class="layer">
                 <h3>Berry Tea</h3>
                 <h4>12 $</h4>
-                <a href="cart.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
+                <a href="cos.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
             </div>
         </div>
     </div>
@@ -75,7 +75,7 @@
             <div class="layer">
                 <h3>Linden Tea</h3>
                 <h4>7.99 $</h4>
-                <a href="cart.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
+                <a href="cos.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
             </div>
         </div>
         <div class="campus-col">
@@ -83,7 +83,7 @@
             <div class="layer">
                 <h3>Green Tea</h3>
                 <h4>8.99 $</h4>
-                <a href="cart.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
+                <a href="cos.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
             </div>
         </div>
         <div class="campus-col">
@@ -91,7 +91,7 @@
             <div class="layer">
                 <h3>Ginger Tea</h3>
                 <h4>4.99 $</h4>
-                <a href="cart.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
+                <a href="cos.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
             </div>
         </div>
     </div>
