--- a/reservation.html
+++ b/reservation.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <title>Tea House Iasi</title>
-        <link rel="stylesheet" href="styles/reservation.css">
+        <link rel="stylesheet" href="reservation.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
