--- a/signup.html
+++ b/signup.html
@@ -3,8 +3,8 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tea House Iasi</title>
-        <link rel="stylesheet" href="styles/style.css">
-        <link rel="stylesheet" href="styles/style2.css">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style2.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
 
