--- a/signup.html
+++ b/signup.html
@@ -3,8 +3,8 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tea House Iasi</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="style2.css">
+        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="styles/style2.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
 
@@ -22,11 +22,11 @@
                 <i class="fa fa-times"  onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="">MENU</a></li>
-                    <li><a href="">RESERVATION</a></li>
+                    <li><a href="menu.html">MENU</a></li>
+                    <li><a href="reservation.html">RESERVATION</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="">HELP</a></li>
+                    <li><a href="help.html">HELP</a></li>
                     <li><a href="login.html">LOGIN</a></li>
                 </ul>
                </div>
