--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
         <div class="about-col">
             <img src="images/avatar.png" alt="avatar">
             <h1  style="text-align:center;"><small>Carp Răzvan Nicolae</small></h1>
-            <p>descriere</p>
+            <p>descriere23</p>
         </div>
 
         <div class="about-col">
