--- a/about.html
+++ b/about.html
@@ -49,7 +49,10 @@
         <div class="about-col">
             <img src="images/avatar.png" alt="avatar">
             <h1  style="text-align:center;"><small>Carp Răzvan Nicolae</small></h1>
-            <p>descriere23</p>
+            <p>
+                I am a second-year student at the Faculty of Informatics Iasi and I have been attracted to this field 
+                since I was little. I like to spend time on the computer, writing code and playing games. I also like 
+                to watch football and tennis matches.</p>
         </div>
 
         <div class="about-col">
@@ -85,12 +88,12 @@
 <p>Saturday: <span style="font-style: italic;">10:00-22:00</span></p>
 <p>Sunday: <span style="font-style: italic;">Closed</span></p>
 
+    <p> To be up to date with the latest information, follow us on</p>
     <div class="icons">
         <i class="fa fa-facebook" ></i>
         <i class="fa fa-twitter" ></i>
         <i class="fa fa-instagram" ></i>
     </div>   
-
 </section>
 
 
