--- a/cart.html
+++ b/cart.html
@@ -109,7 +109,9 @@
         </table>
     </div>
 </div>
-   <section class="footer">
+
+
+<section class="footer">
     <h4>Program:</h4>
     <p>Monday: <span style="font-style: italic;">08:30-22:00</span></p>
 <p>Tuesday: <span style="font-style: italic;">08:30-22:00</span></p>
@@ -118,12 +120,15 @@
 <p>Friday: <span style="font-style: italic;">08:30-22:00</span></p>
 <p>Saturday: <span style="font-style: italic;">10:00-22:00</span></p>
 <p>Sunday: <span style="font-style: italic;">Closed</span></p>
+
+    <p> To be up to date with the latest information, follow us on</p>
     <div class="icons">
         <i class="fa fa-facebook" ></i>
         <i class="fa fa-twitter" ></i>
         <i class="fa fa-instagram" ></i>
     </div>   
 </section>
+
 <script>
      var navLinks = document.getElementById("navLinks");
      function showMenu(){
