--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tea House Iasi</title>
-        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="styles/contact.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -71,16 +71,22 @@
     </div>
 </section>
 
+
 <section class="footer">
-    <h4>About Us</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-        ut labore et dolore magna aliqua.<br>Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut .</p>
+    <h4>Program:</h4>
+    <p>Monday: <span style="font-style: italic;">08:30-22:00</span></p>
+<p>Tuesday: <span style="font-style: italic;">08:30-22:00</span></p>
+<p>Wednesday: <span style="font-style: italic;">08:30-22:00</span></p>
+<p>Thursday: <span style="font-style: italic;">08:30-22:00</span></p>
+<p>Friday: <span style="font-style: italic;">08:30-22:00</span></p>
+<p>Saturday: <span style="font-style: italic;">10:00-22:00</span></p>
+<p>Sunday: <span style="font-style: italic;">Closed</span></p>
+
+    <p> To be up to date with the latest information, follow us on</p>
     <div class="icons">
         <i class="fa fa-facebook" ></i>
         <i class="fa fa-twitter" ></i>
         <i class="fa fa-instagram" ></i>
-        <i class="fa fa-linkedin" ></i>
     </div>   
 </section>
 
