--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tea House Iasi</title>
-        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="styles/meniu.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,12 +38,12 @@
 <!------menu content ------>
 
 
-<section class="campus">
+<section class="produse">
     <h1> What can you buy from us ?</h1> 
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <p>Looking for a delicious and refreshing way to indulge your senses? Look no further than our Tea House menu, featuring a wide selection of premium teas and tasty treats to satisfy your cravings.</p>
 
     <div class="row">
-        <div class="campus-col">
+        <div class="produse-col">
             <img src="images/blackTea.png">
             <div class="layer">
                 <h3>Black Tea</h3>
@@ -51,7 +51,7 @@
                 <a href="cart.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
             </div>
         </div>
-        <div class="campus-col">
+        <div class="produse-col">
             <img src="images/mintTea.png">
             <div class="layer">
                 <h3>Mint Tea</h3>
@@ -59,7 +59,7 @@
                 <a href="cart.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
             </div>
         </div>
-        <div class="campus-col">
+        <div class="produse-col">
             <img src="images/berryTea.png">
             <div class="layer">
                 <h3>Berry Tea</h3>
@@ -70,7 +70,7 @@
     </div>
 
     <div class="row">
-        <div class="campus-col">
+        <div class="produse-col">
             <img src="images/lindenTea.png">
             <div class="layer">
                 <h3>Linden Tea</h3>
@@ -78,7 +78,7 @@
                 <a href="cart.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
             </div>
         </div>
-        <div class="campus-col">
+        <div class="produse-col">
             <img src="images/greenTea.png">
             <div class="layer">
                 <h3>Green Tea</h3>
@@ -86,7 +86,7 @@
                 <a href="cart.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
             </div>
         </div>
-        <div class="campus-col">
+        <div class="produse-col">
             <img src="images/gingerTea.png">
             <div class="layer">
                 <h3>Ginger Tea</h3>
@@ -100,15 +100,20 @@
 </section>
 
 <section class="footer">
-    <h4>About Us</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-        ut labore et dolore magna aliqua.<br>Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut .</p>
+    <h4>Program:</h4>
+    <p>Monday: <span style="font-style: italic;">08:30-22:00</span></p>
+<p>Tuesday: <span style="font-style: italic;">08:30-22:00</span></p>
+<p>Wednesday: <span style="font-style: italic;">08:30-22:00</span></p>
+<p>Thursday: <span style="font-style: italic;">08:30-22:00</span></p>
+<p>Friday: <span style="font-style: italic;">08:30-22:00</span></p>
+<p>Saturday: <span style="font-style: italic;">10:00-22:00</span></p>
+<p>Sunday: <span style="font-style: italic;">Closed</span></p>
+
+    <p> To be up to date with the latest information, follow us on</p>
     <div class="icons">
         <i class="fa fa-facebook" ></i>
         <i class="fa fa-twitter" ></i>
         <i class="fa fa-instagram" ></i>
-        <i class="fa fa-linkedin" ></i>
     </div>   
 </section>
 
