--- a/reservation.html
+++ b/reservation.html
@@ -58,8 +58,8 @@
     }
   </script>
 </select>
-
-<button type="submit" class="hero-btn red-btn">Send The Message</button>
+<p></p>
+<button type="submit" class="hero-btn red-btn">Reserve</button>
 
             </form>
         </div>     
@@ -80,6 +80,8 @@
 <p>Friday: <span style="font-style: italic;">08:30-22:00</span></p>
 <p>Saturday: <span style="font-style: italic;">10:00-22:00</span></p>
 <p>Sunday: <span style="font-style: italic;">Closed</span></p>
+
+    <p> To be up to date with the latest information, follow us on</p>
     <div class="icons">
         <i class="fa fa-facebook" ></i>
         <i class="fa fa-twitter" ></i>
