--- a/signup.html
+++ b/signup.html
@@ -3,8 +3,8 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tea House Iasi</title>
-        <link rel="stylesheet" href="styles/style.css">
-        <link rel="stylesheet" href="styles/style2.css">
+        <link rel="stylesheet" href="styles/log.css">
+       
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
 
@@ -52,6 +52,7 @@
         Already a member? <a href="./login.html">Login here</a> 
     </div>
    </div>
+
    <section class="footer">
     <h4>Program:</h4>
     <p>Monday: <span style="font-style: italic;">08:30-22:00</span></p>
@@ -61,6 +62,8 @@
 <p>Friday: <span style="font-style: italic;">08:30-22:00</span></p>
 <p>Saturday: <span style="font-style: italic;">10:00-22:00</span></p>
 <p>Sunday: <span style="font-style: italic;">Closed</span></p>
+
+    <p> To be up to date with the latest information, follow us on</p>
     <div class="icons">
         <i class="fa fa-facebook" ></i>
         <i class="fa fa-twitter" ></i>
