--- a/forgot.html
+++ b/forgot.html
@@ -42,6 +42,7 @@
         <button type="submit">Reset</button>
     </form>
    </div>
+
    <section class="footer">
     <h4>Program:</h4>
     <p>Monday: <span style="font-style: italic;">08:30-22:00</span></p>
@@ -51,12 +52,15 @@
 <p>Friday: <span style="font-style: italic;">08:30-22:00</span></p>
 <p>Saturday: <span style="font-style: italic;">10:00-22:00</span></p>
 <p>Sunday: <span style="font-style: italic;">Closed</span></p>
+
+    <p> To be up to date with the latest information, follow us on</p>
     <div class="icons">
         <i class="fa fa-facebook" ></i>
         <i class="fa fa-twitter" ></i>
         <i class="fa fa-instagram" ></i>
     </div>   
 </section>
+
 <script>
      var navLinks = document.getElementById("navLinks");
      function showMenu(){
