--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tea House Iasi</title>
-        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="styles/home.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,7 +33,7 @@
 
       <div class="text-box">
         <h1>Welcome to TEA House</h1>
-        <p>Bla bla bla bla bigest univeristy bla bla bla bla bla bla bla bla bla adajsdkasdioad nkdandklosd <br>Si asa imi vine cateo bla bla bla bla bla data</p>
+        <p>Welcome to our Tea House, the ultimate destination for tea lovers everywhere! <br> With a wide selection of premium teas and a cozy, inviting atmosphere, <br>our Tea House is the perfect place to relax and unwind.</p>
         <a href="" class="hero-btn">Visit us to know more</a>
       </div>  
 
@@ -41,27 +41,28 @@
 
     <!----course---->
     <section class="course">
-        <h1> Our best products </h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <h1> The most popular </h1>
+        <p>A brief description of the most ordered products by our customers</p>
 
         <div class="row" >
             <div class="course-col">
                 <h3>Mint Tea</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                     laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Introducing the refreshing taste of mint tea! Made from the freshest mint leaves and
+                     steeped to perfection, our mint tea is the perfect way to relax and unwind after a 
+                     long day. With its cool, invigorating flavor and natural health benefits, our mint 
+                     tea is the ultimate choice for those looking for a delicious and soothing beverage.</p>
             </div>
             <div class="course-col">
                 <h3>Lindea Tea</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                     laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Introducing the exquisite taste of Lindea tea, the perfect choice for tea lovers everywhere
+                    . Made from the highest-quality tea leaves and blended to perfection, our Lindea tea is the
+                     ultimate indulgence for those who appreciate the finer things in life.</p>
             </div>
             <div class="course-col">
                 <h3>Berry Tea</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                     laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Whether you prefer a hot cup of tea on a chilly day or a refreshing iced tea on a hot summer afternoon,
+                     our berry tea is perfect for any occasion. The sweet and tangy taste of berries will leave you feeling
+                      invigorated and refreshed, while also providing a range of natural health benefits.</p>
             </div>
 
         </div>
@@ -71,7 +72,11 @@
     <!----Campus---->
     <section class="campus">
         <h1> Where can you find us ?</h1> 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <p>Looking for a convenient and cozy spot to grab a cup of tea after class? Look no further than our location just steps away from Facultatea de Informatica Iasi!</p>
+
+        <p> Our cozy tea shop is the perfect place to relax and recharge after a long day of studying. With a wide selection of premium teas and a comfortable atmosphere,<br> our tea shop is the ideal spot to catch up with friends, work on assignments, or simply enjoy a quiet moment to yourself.</p>
+            
+        <p>  And with our convenient location just a stone's throw away from Facultatea de Informatica Iasi, you can easily pop in for a quick cup of tea in between classes or on your way home.</p>
 
         <div class="row">
             <div class="campus-col">
@@ -93,14 +98,17 @@
     <div class="testimonial-col">
         <img src="images/user1.jpg">
         <div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-            ut labore et dolore magna aliqua.</p>
-            <h3>Gigel Popescu</h3>  
+            <p>I recently visited the Tea House and had a wonderful experience. The selection of teas is 
+                impressive and the staff is knowledgeable and passionate about tea. I appreciated their
+                 recommendations and willingness to help me find the perfect blend for my taste buds.
+                 <br>The only reason I'm giving the Tea House 4.5 stars instead of 5 is because
+                 the atmosphere here is so cool that sometimes I forget to go to classes!</p>
+            <h3>Ana Maria</h3>  
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>  
             <i class="fa fa-star" ></i>  
             <i class="fa fa-star" ></i>  
-            <i class="fa fa-star-o" ></i>    
+            <i class="fa fa-star-half-o" ></i>    
 
         </div>
     </div>
@@ -108,36 +116,44 @@
     <div class="testimonial-col">
         <img src="images/user2.jpg">
         <div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-            ut labore et dolore magna aliqua.</p>
-            <h3>Cosmin Varlan</h3>
+            <p>I highly recommend the Tea House to anyone who appreciates the art of tea. Whether you're looking
+                 for a quiet place to study or catch up with friends, or simply want to indulge in a relaxing tea experience,
+                  the Tea House is the perfect destination.</p>
+            <h3>Andrei Cosmin</h3>
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>  
             <i class="fa fa-star" ></i>  
             <i class="fa fa-star" ></i>  
-            <i class="fa fa-star-half-o" ></i>    
+            <i class="fa fa-star" ></i>     
         </div>
     </div>
 </div>
 
 </section>
 
-<!----Call To Action ------>
+<!----Call To Reserve ------>
 <section class="cta">
-    <h1>For an appointment contact us.</h1>
-    <a href="contact.html" class="hero-btn">CONTACT US</a>
+    <h1>If you want to reserve a table click here</h1>
+    <a href="reservation.html" class="hero-btn">RESERVE</a>
 </section>
 
 <!----Footer ------>
 <section class="footer">
-    <h4>About Us</h4>
-    <p>To watch the latest news about us, follow us on our social media platforms</p>
+    <h4>Program:</h4>
+    <p>Monday: <span style="font-style: italic;">08:30-22:00</span></p>
+<p>Tuesday: <span style="font-style: italic;">08:30-22:00</span></p>
+<p>Wednesday: <span style="font-style: italic;">08:30-22:00</span></p>
+<p>Thursday: <span style="font-style: italic;">08:30-22:00</span></p>
+<p>Friday: <span style="font-style: italic;">08:30-22:00</span></p>
+<p>Saturday: <span style="font-style: italic;">10:00-22:00</span></p>
+<p>Sunday: <span style="font-style: italic;">Closed</span></p>
+
+    <p> To be up to date with the latest information, follow us on</p>
     <div class="icons">
         <i class="fa fa-facebook" ></i>
-        <i class="fa fa-instagram" ></i>
         <i class="fa fa-twitter" ></i>
+        <i class="fa fa-instagram" ></i>
     </div>   
-
 </section>
 
  <!------JavaScript for Toggle Menu ------>   
