--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="zxx">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
+
         <title>Tea House Iasi</title>
         <link rel="stylesheet" href="styles/home.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,8 +17,8 @@
 <body>
     <section class="header">
         <nav>
-           <a href="index.html"><img src="images/logo.png"></a>
-           <div class="nav-links" id="navLinks">
+            <a href="index.html"><img src="images/logo.png" alt="Tea House Iasi Logo"></a>
+            <div class="nav-links" id="navLinks">
             <i class="fa fa-times"  onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
@@ -39,7 +41,7 @@
 
     </section>
 
-    <!----course---->
+
     <section class="course">
         <h1> The most popular </h1>
         <p>A brief description of the most ordered products by our customers</p>
@@ -69,7 +71,7 @@
         
     </section>
     
-    <!----Campus---->
+
     <section class="campus">
         <h1> Where can you find us ?</h1> 
         <p>Looking for a convenient and cozy spot to grab a cup of tea after class? Look no further than our location just steps away from Facultatea de Informatica Iasi!</p>
@@ -80,7 +82,7 @@
 
         <div class="row">
             <div class="campus-col">
-                <img src="images/infouaic.png">
+                <img src="images/infouaic.png" alt="info">
                 <div class="layer">
                     <h3>Facultatea de Informatica</h3>
                 </div>
@@ -89,14 +91,14 @@
 
     </section>
 
-<!----testimonials ------>
+
 <section class="testimonials">
     <h1>What Our Clients Says</h1>
    
 
 <div class="row">
     <div class="testimonial-col">
-        <img src="images/user1.jpg">
+        <img src="images/user1.jpg" alt="info">
         <div>
             <p>I recently visited the Tea House and had a wonderful experience. The selection of teas is 
                 impressive and the staff is knowledgeable and passionate about tea. I appreciated their
@@ -114,7 +116,7 @@
     </div>
 
     <div class="testimonial-col">
-        <img src="images/user2.jpg">
+        <img src="images/user2.jpg" alt="user2">
         <div>
             <p>I highly recommend the Tea House to anyone who appreciates the art of tea. Whether you're looking
                  for a quiet place to study or catch up with friends, or simply want to indulge in a relaxing tea experience,
@@ -131,13 +133,13 @@
 
 </section>
 
-<!----Call To Reserve ------>
+
 <section class="cta">
     <h1>If you want to reserve a table click here</h1>
     <a href="reservation.html" class="hero-btn">RESERVE</a>
 </section>
 
-<!----Footer ------>
+
 <section class="footer">
     <h4>Program:</h4>
     <p>Monday: <span style="font-style: italic;">08:30-22:00</span></p>
@@ -156,7 +158,7 @@
     </div>   
 </section>
 
- <!------JavaScript for Toggle Menu ------>   
+
 <script>
      var navLinks = document.getElementById("navLinks");
      function showMenu(){
