--- a/menu.html
+++ b/menu.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
+
         <title>Tea House Iasi</title>
         <link rel="stylesheet" href="styles/meniu.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,8 +17,8 @@
 <body>
     <section class="sub-header">
         <nav>
-           <a href="index.html"><img src="images/logo.png"></a>
-           <div class="nav-links" id="navLinks">
+            <a href="index.html"><img src="images/logo.png" alt="Tea House Iasi Logo"></a>
+            <div class="nav-links" id="navLinks">
             <i class="fa fa-times"  onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
@@ -36,7 +38,7 @@
 
     </section>
 
-<!------menu content ------>
+
 
 
 <section class="produse">
@@ -45,7 +47,7 @@
 
     <div class="row">
         <div class="produse-col">
-            <img src="images/blackTea.png">
+            <img src="images/blackTea.png" alt="blackTea">
             <div class="layer">
                 <h3>Black Tea</h3>
                 <h4>9.99 $</h4>
@@ -53,7 +55,7 @@
             </div>
         </div>
         <div class="produse-col">
-            <img src="images/mintTea.png">
+            <img src="images/mintTea.png" alt="mintTea">
             <div class="layer">
                 <h3>Mint Tea</h3>
                 <h4>10 $</h4>
@@ -61,7 +63,7 @@
             </div>
         </div>
         <div class="produse-col">
-            <img src="images/berryTea.png">
+            <img src="images/berryTea.png" alt="berryTea">
             <div class="layer">
                 <h3>Berry Tea</h3>
                 <h4>12 $</h4>
@@ -72,7 +74,7 @@
 
     <div class="row">
         <div class="produse-col">
-            <img src="images/lindenTea.png">
+            <img src="images/lindenTea.png" alt="lindenTea">
             <div class="layer">
                 <h3>Linden Tea</h3>
                 <h4>7.99 $</h4>
@@ -80,7 +82,7 @@
             </div>
         </div>
         <div class="produse-col">
-            <img src="images/greenTea.png">
+            <img src="images/greenTea.png" alt="greenTea">
             <div class="layer">
                 <h3>Green Tea</h3>
                 <h4>8.99 $</h4>
@@ -88,7 +90,7 @@
             </div>
         </div>
         <div class="produse-col">
-            <img src="images/gingerTea.png">
+            <img src="images/gingerTea.png" alt="gingerTea">
             <div class="layer">
                 <h3>Ginger Tea</h3>
                 <h4>4.99 $</h4>
@@ -118,7 +120,7 @@
     </div>   
 </section>
 
- <!------JavaScript for Toggle Menu ------>   
+ 
 <script>
      var navLinks = document.getElementById("navLinks");
      function showMenu(){
