--- a/reservation.html
+++ b/reservation.html
@@ -68,7 +68,7 @@
 </div>
 <section><h3>View the scheme and choose the right table.</h3></section>
 
-<img src="images/table.png" alt="table" class="bordered">
+<img src="images/tables.png" alt="table" class="bordered">
 
 
 
