--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
         <title>Tea House Iasi</title>
         <link rel="stylesheet" href="styles/contact.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +16,7 @@
 <body>
     <section class="sub-header">
         <nav>
-           <a href="index.html"><img src="images/logo.png"></a>
+            <a href="index.html"><img src="images/logo.png" alt="Tea House Iasi Logo"></a>
            <div class="nav-links" id="navLinks">
             <i class="fa fa-times"  onclick="hideMenu()"></i>
                 <ul>
@@ -36,32 +37,30 @@
 
     </section>
 
-<!------contact us content ------>
 
-<section class="location">
+<div class="location">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2712.185779777559!2d27.572647215469093!3d47.173799079158385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40cafb6227e846bd%3A0x193e4b6864504e2c!2sFacultatea%20de%20Informatic%C4%83!5e0!3m2!1sro!2sro!4v1680871550272!5m2!1sro!2sro" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</section>
+</div>
 
 <section class="contact-us">
     <div class="row">
         <div class="contact-col">
             <div>
                 <i class="fa fa-home"></i>
-                <span>
+                <div>
                     <h5>Strada General Henri Mathias Berthelot Nr. 16, Iași 700259</h5>
-                    <p>Iasi, Romania</p>
-                </span>
+                </div>
             </div>
             <div>
                 <i class="fa fa-phone"></i>
-                <span>
-                    <h5>Nr. telefon fix</h5>
-                    <p>0232 000 000</p>
-                </span>
+                <div>
+                    <h5>Nr. telefon:</h5>
+                    <p>+40 732 382 853</p>
+                </div>
             </div>
         </div>
         <div class="contact-col">
-            <form action="">
+            <form action="#">
                 <input type="text" placeholder="Enter Your Name" required>
                 <input type="email" placeholder="Enter Your Email" required>
                 <input type="text" placeholder="Enter Your Request" required>
@@ -91,7 +90,7 @@
     </div>   
 </section>
 
- <!------JavaScript for Toggle Menu ------>   
+ 
 <script>
      var navLinks = document.getElementById("navLinks");
      function showMenu(){
