--- a/signup.html
+++ b/signup.html
@@ -28,6 +28,7 @@
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="help.html">HELP</a></li>
                     <li><a href="login.html">LOGIN</a></li>
+                    <li class="fa fa-shopping-cart"><a href="cart.html"> CART</a></li>
                 </ul>
                </div>
                <i id="menu" class="fa fa-bars" onclick="showMenu()"></i>
