--- a/help.html
+++ b/help.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
+
         <title>Tea House Iasi</title>
         <link rel="stylesheet" href="styles/help.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +17,7 @@
 <body>
     <section class="sub-header">
         <nav>
-           <a href="index.html"><img src="images/logo.png"></a>
+            <a href="index.html"><img src="images/logo.png" alt="Tea House Iasi Logo"></a>
            <div class="nav-links" id="navLinks">
             <i class="fa fa-times"  onclick="hideMenu()"></i>
                 <ul class="myCls">
@@ -35,9 +37,6 @@
       <h1>Help</h1>
 
     </section>
-
-<!------help content ------>
-
 
 <section class="campus">
     <h1> How can you use this site ?</h1> 
@@ -78,7 +77,6 @@
     </div>   
 </section>
 
- <!------JavaScript for Toggle Menu ------>   
 <script>
      var navLinks = document.getElementById("navLinks");
      function showMenu(){
