--- a/menu.html
+++ b/menu.html
@@ -51,7 +51,7 @@
             <div class="layer">
                 <h3>Black Tea</h3>
                 <h4>9.99 $</h4>
-                <a href="cart.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
+                <a href="cart.html" class="cos-btn fa fa-shopping-basket"></a>
             </div>
         </div>
         <div class="produse-col">
@@ -59,7 +59,7 @@
             <div class="layer">
                 <h3>Mint Tea</h3>
                 <h4>10 $</h4>
-                <a href="cart.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
+                <a href="cart.html" class="cos-btn fa fa-shopping-basket"></a>
             </div>
         </div>
         <div class="produse-col">
@@ -67,7 +67,7 @@
             <div class="layer">
                 <h3>Berry Tea</h3>
                 <h4>12 $</h4>
-                <a href="cart.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
+                <a href="cart.html" class="cos-btn fa fa-shopping-basket"></a>
             </div>
         </div>
     </div>
@@ -78,7 +78,7 @@
             <div class="layer">
                 <h3>Linden Tea</h3>
                 <h4>7.99 $</h4>
-                <a href="cart.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
+                <a href="cart.html" class="cos-btn fa fa-shopping-basket"></a>
             </div>
         </div>
         <div class="produse-col">
@@ -86,7 +86,7 @@
             <div class="layer">
                 <h3>Green Tea</h3>
                 <h4>8.99 $</h4>
-                <a href="cart.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
+                <a href="cart.html" class="cos-btn fa fa-shopping-basket"></a>
             </div>
         </div>
         <div class="produse-col">
@@ -94,7 +94,7 @@
             <div class="layer">
                 <h3>Ginger Tea</h3>
                 <h4>4.99 $</h4>
-                <a href="cart.html"><button class="cos-btn fa fa-shopping-basket"></button></a>
+                <a href="cart.html" class="cos-btn fa fa-shopping-basket"></a>
             </div>
         </div>
     </div>
