--- a/menu.html
+++ b/menu.html
@@ -50,7 +50,7 @@
             <img src="images/blackTea.png" alt="blackTea">
             <div class="layer">
                 <h3>Black Tea</h3>
-                <h4>9.99 $</h4>
+                <h4>8 lei</h4>
                 <a href="cart.html" class="cos-btn fa fa-shopping-basket"></a>
             </div>
         </div>
@@ -58,7 +58,7 @@
             <img src="images/mintTea.png" alt="mintTea">
             <div class="layer">
                 <h3>Mint Tea</h3>
-                <h4>10 $</h4>
+                <h4>7.5 lei</h4>
                 <a href="cart.html" class="cos-btn fa fa-shopping-basket"></a>
             </div>
         </div>
@@ -66,7 +66,7 @@
             <img src="images/berryTea.png" alt="berryTea">
             <div class="layer">
                 <h3>Berry Tea</h3>
-                <h4>12 $</h4>
+                <h4>9 lei</h4>
                 <a href="cart.html" class="cos-btn fa fa-shopping-basket"></a>
             </div>
         </div>
@@ -77,7 +77,7 @@
             <img src="images/lindenTea.png" alt="lindenTea">
             <div class="layer">
                 <h3>Linden Tea</h3>
-                <h4>7.99 $</h4>
+                <h4>9 lei</h4>
                 <a href="cart.html" class="cos-btn fa fa-shopping-basket"></a>
             </div>
         </div>
@@ -85,7 +85,7 @@
             <img src="images/greenTea.png" alt="greenTea">
             <div class="layer">
                 <h3>Green Tea</h3>
-                <h4>8.99 $</h4>
+                <h4>8 lei</h4>
                 <a href="cart.html" class="cos-btn fa fa-shopping-basket"></a>
             </div>
         </div>
@@ -93,7 +93,7 @@
             <img src="images/gingerTea.png" alt="gingerTea">
             <div class="layer">
                 <h3>Ginger Tea</h3>
-                <h4>4.99 $</h4>
+                <h4>7 lei</h4>
                 <a href="cart.html" class="cos-btn fa fa-shopping-basket"></a>
             </div>
         </div>
