--- a/cart.html
+++ b/cart.html
@@ -47,14 +47,14 @@
                     <img src="images/blackTea.png" alt="blacktea">
                     <div>
                         <p>Black Tea</p>
-                        <small>Price: 9.99$</small>
+                        <small>Price: 8 lei</small>
                         <br>
                         <a href="">Remove</a>
                     </div>
                 </div>
             </td>
             <td><input type="number" value="1"></td>
-            <td>9.99$</td>
+            <td>8 lei</td>
         </tr>
         <tr>
             <td>
@@ -62,14 +62,14 @@
                     <img src="images/berryTea.png" alt="berryTea">
                     <div>
                         <p>Berry Tea</p>
-                        <small>Price: 12$</small>
+                        <small>Price: 9 lei</small>
                         <br>
                         <a href="">Remove</a>
                     </div>
                 </div>
             </td>
             <td><input type="number" value="1"></td>
-            <td>12$</td>
+            <td>9 lei</td>
         </tr>
 
         <tr>
@@ -78,29 +78,29 @@
                     <img src="images/lindenTea.png" alt="lindenTea">
                     <div>
                         <p>Linden Tea</p>
-                        <small>Price: 7.99$</small>
+                        <small>Price: 9 lei</small>
                         <br>
                         <a href="">Remove</a>
                     </div>
                 </div>
             </td>
             <td><input type="number" value="1"></td>
-            <td>7.99$</td>
+            <td>9 lei</td>
         </tr>
     </table>
     <div class="total-price">
         <table>
             <tr>
                 <td>Subtotal</td>
-                <td>29.98$</td>
+                <td>26 lei</td>
             </tr>
             <tr>
                 <td>Tax</td>
-                <td>2$</td>
+                <td>2.6 lei</td>
             </tr>
             <tr>
                 <td>Total</td>
-                <td>31.98$</td>
+                <td>28.6 lei</td>
             </tr>
             <tr>
                 <td colspan="2"><button class="order-button">Order</button></td>
