--- a/help.html
+++ b/help.html
@@ -40,21 +40,18 @@
 
 <section class="campus">
     <h1> How can you use this site ?</h1> 
-    <p>Use the instructions to learn how to use our page.</p>
-</section>
 
-<section class="campus">
-    <h1> To navigate on each page on the right we have a menu that contains several options: </h1>
+    <h1> To navigate on each page on the right we have a menu <br>that contains several options: </h1>
         <ul> 
-            <li> Home -> This button takes you to the homepage of the site. </li>
-            <li> Menu -> This button takes you to the list of our products that are available for sale. </li>
-            <li> Reservation -> This button takes you to the map of the tables that are available to book. </li>
-            <li> Contact -> This button takes you to the contact page where you can send a message to us. </li>
-            <li> About -> This button takes you to the about page where you can learn more about us. </li>
-            <li> Help -> This button takes you to the help page where you see the functions of the site. </li>
-            <li> Login -> This button takes you to the login page where you can send a message to us. </li>
+            <li> <h2>Home -> This button takes you to the homepage of the site.</h2> </li>
+            <li> <h2>Menu -> This button takes you to the list of our products that are available for sale. </h2></li>
+            <li> <h2>Reservation -> This button takes you to the map of the tables that are available to book. </h2></li>
+            <li> <h2>Contact -> This button takes you to the contact page where you can send a message to us. </h2></li>
+            <li> <h2>About -> This button takes you to the about page where you can learn more about us. </h2></li>
+            <li> <h2>Help -> This button takes you to the help page where you see the functions of the site. </h2></li>
+            <li> <h2>Login -> This button takes you to the login page where you can send a message to us. </h2></li>
         </ul>
-    <h1> After you register as a customer, you can login (or reset your password in case you forgot it) into your account and start ordering / booking.</h1>
+    <h1> After you register as a customer, you can login (or reset your password <br> in case you forgot it) into your account and start ordering / booking.</h1>
     <h1> Enter the site, register, login, add items to cart, buy them. </h1>
     <h1> Be happy ! :) </h1>
 </section>
