--- a/help.html
+++ b/help.html
@@ -49,7 +49,7 @@
             <li> <h2>Contact -> This button takes you to the contact page where you can send a message to us. </h2></li>
             <li> <h2>About -> This button takes you to the about page where you can learn more about us. </h2></li>
             <li> <h2>Help -> This button takes you to the help page where you see the functions of the site. </h2></li>
-            <li> <h2>Login -> This button takes you to the login page where you can send a message to us. </h2></li>
+            <li> <h2>Login -> This button takes you to the login page where you can login into your account(if you have one), register as a new customer, or reset your password(if you forgot it). </h2></li>
             <li> <h2>Cart -> This button takes you to the cart page where you see what items you have added to your basket. </h2></li>
         </ul>
     <h1> After you register as a customer, you can login (or reset your password <br> in case you forgot it) into your account and start ordering / booking.</h1>
