--- a/help.html
+++ b/help.html
@@ -47,7 +47,7 @@
             <li> <h2>Menu -> This button takes you to the list of our products that are available for sale. </h2></li>
             <li> <h2>Reservation -> This button takes you to the map of the tables that are available to book. </h2></li>
             <li> <h2>Contact -> This button takes you to the contact page where you can send a message to us. </h2></li>
-            <li> <h2>About -> This button takes you to the about page where you can learn more about us. </h2></li>
+            <li> <h2>About -> This button takes you to the about page where you can learn more about us. In the footer of the about page you also have a button that takes you to the Project Documentation </h2></li>
             <li> <h2>Help -> This button takes you to the help page where you see the functions of the site. </h2></li>
             <li> <h2>Login -> This button takes you to the login page where you can login into your account(if you have one), register as a new customer, or reset your password(if you forgot it). </h2></li>
             <li> <h2>Cart -> This button takes you to the cart page where you see what items you have added to your basket. </h2></li>
