--- a/signup.html
+++ b/signup.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
         <title>Tea House Iasi</title>
         <link rel="stylesheet" href="styles/log.css">
        
@@ -17,7 +18,7 @@
     <body>
         <section class="sub-header">
             <nav>
-               <a href="index.html"><img src="images/logo.png"></a>
+               <a href="index.html"><img src="images/logo.png" alt="logo"></a>
                <div class="nav-links" id="navLinks">
                 <i class="fa fa-times"  onclick="hideMenu()"></i>
                 <ul>
@@ -73,7 +74,7 @@
     </div>   
 </section>
 
- <!------JavaScript for Toggle Menu ------>   
+  
 <script>
      var navLinks = document.getElementById("navLinks");
      function showMenu(){
