--- a/about.html
+++ b/about.html
@@ -83,6 +83,8 @@
 
 
 <section class="footer">
+ 
+
     <h4>Program:</h4>
     <p>Monday: <span style="font-style: italic;">08:30-22:00</span></p>
 <p>Tuesday: <span style="font-style: italic;">08:30-22:00</span></p>
@@ -91,13 +93,18 @@
 <p>Friday: <span style="font-style: italic;">08:30-22:00</span></p>
 <p>Saturday: <span style="font-style: italic;">10:00-22:00</span></p>
 <p>Sunday: <span style="font-style: italic;">Closed</span></p>
+<p></p>
+
+<a href="documentatie.html" class="hero-btn">Project Documentation</a>
 
     <p> To be up to date with the latest information, follow us on</p>
     <div class="icons">
         <i class="fa fa-facebook" ></i>
         <i class="fa fa-twitter" ></i>
         <i class="fa fa-instagram" ></i>
-    </div>   
+    </div>
+    
+    
 </section>
 
 
