--- a/reservation.html
+++ b/reservation.html
@@ -50,14 +50,18 @@
                 <input type="text" id="name" name="name" placeholder="Enter Your Name" required>
                 <label for="email">Enter Your Email:</label>
                 <input type="email" id="email" name="email" placeholder="Enter Your Email" required>
+                <label for="date">Enter The Date:</label>
+                <input type="date" id="date" name="date"  required>
+                <label for="time">Enter The Time:</label>
+                <input type="time" id="time" name="time" required>
                 <label for="table">Select your table number:</label>
                 <select id="table" name="table" required>
                 <option value="">--Select your table number--</option>
                 <script>
                     for (var i = 1; i <= 8; i++) {
                     document.write('<option value="' + i + '">' + i + '</option>');
-    }
-  </script>
+                    }
+                </script>
 </select>
 <p></p>
 <button type="submit" class="hero-btn red-btn">Reserve</button>
